--- a/mod/thmod/localisation/english/marauder_l_english.yml
+++ b/mod/thmod/localisation/english/marauder_l_english.yml
@@ -188,9 +188,9 @@
  marauder.101.1.desc:0 "[Root.GetSpeciesName] ผู้อ่อนแอ นักรบของเรากำลังจะปล้นระบบดาวของคุณ เผชิญหน้ากับพวกเขาในการต่อสู้หากคุณมีความกล้ามากพอหรือเป็นเต่าหดหัวจนกว่าพวกเขาจะปล้นความร่ำรวยจากคุณไปจนหมด\n\nแน่นอน คุณสามารถส่งบรรณาการตอนนี้เพื่อที่คุณจะได้ไม่ต้องเจ็บตัว หากเป็นที่น่าพอใจ นักรบของเราอาจถูกสั่งให้หันหลังกลับทันที..."
  marauder.101.2.desc:0 "HYEEEIIIIIEEEEEE!!!!!!! [Root.GetSpeciesName]-dwamaks! We come visit your systems! We save you from growing too rich and fat, yes!\n\nUnless you think of reason why you not make good dwamak-stew..."
  marauder.101.3.desc:0 "[Root.GetSpeciesNamePlural]. She of the Void has communicated to us Her desire to use your systems as ceremonial sites from which to celebrate Her ever-lasting dominion over Space. As Her humble servants, we have no choice but to comply.\n\nA battle fleet of our finest warriors, drawn from all of our warring factions, is currently on its way to you to gather tribute and servants. To stave off the inevitable and sate Her hunger, you may offer tribute now. If it is sufficient, the fleet will be recalled."
- marauder.101.a:0 "เสนอส่วยบรรณาการ §Y(พลังงาน)§!"
- marauder.101.b:0 "เสนอส่วยบรรณาการ §Y(แร่)§!"
- marauder.101.c:0 "เสนอส่วยบรรณาการ §Y(อาหาร)§!"
+ marauder.101.a:0 "เสนอส่วยบรรณาการ/ค่าคุ้มครอง §Y(พลังงาน)§!"
+ marauder.101.b:0 "เสนอส่วยบรรณาการ/ค่าคุ้มครอง §Y(แร่)§!"
+ marauder.101.c:0 "เสนอส่วยบรรณาการ/ค่าคุ้มครอง §Y(อาหาร)§!"
  marauder.101.1.a.response:0 "A pity! I suppose our warriors will have to look elsewhere for entertainment then.\n\nYour people are safe. For the moment at least."
  marauder.101.d:0 "คุณจะไม่ได้อะไรจากเรา"
  marauder.101.1.b.response:0 "Fools! Then we shall take by force what you should have offered in tribute... and more besides! You have made a terrible mistake this day."
