--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -437,7 +437,7 @@
  BUILD_TIME_REMAINING:0 "£time£ $DAYS$"
  ARMIES_BUTTON:0 "§Hกองทัพ§!"
  GARRISON_ARMY:0 "§Hกองทัพทหารรักษาการณ์§!\nทหารรักษาการณ์คือการรวมกันระหว่างความแข็งแกร่งของ §Yกองทัพป้องกัน§! และ §Yกองทัพจู่โจม§! บนดาว"
- ASSAULT_ARMY:0 "§Hกองทัพจู่โจม§!\nกองทัพเหล่านี้สามารถขึ้นยานและใช้สำหรับการรุกรานบนดาวเคราะห์ดวงอื่นได้"
+ ASSAULT_ARMY:0 "§Hกองทัพจู่โจม§!\nกองทัพเหล่านี้สามารถขึ้นยานและใช้สำหรับการรุกรานดาวเคราะห์ดวงอื่นได้"
  NO_ARMIES:0 "ไม่มีกองทัพ"
  PLANET_DISTRICT_INFO:0 "ดาวเคราะห์ $DISTRICT_PLURAL$"
  DISTRICTS_PLANET_ALL:0 "จำนวนเขตทั้งหมด: §Y$NUM$/$MAX$§!"
@@ -2386,18 +2386,18 @@
  decision_end_discourage_growth:0 "End Growth Discouragement"
  decision_end_discourage_growth_desc:1 "This will remove the political measures that were taken on this world to discourage population growth."
  decision_end_discourage_growth_effects_short:0 "£pop£ ประชากรบนดาวสามารถเพิ่มได้ตามปกติ\n\nลด §Gค่าบำรุงรักษาประชากร§!"
- decision_consecrated_worlds:1 "โลกศักดิ์สิทธิ์"
- decision_consecrated_worlds_desc:2 "Declare this to be a sacred place, consecrated in the traditions of our faith. Pilgrims will travel from afar to rejoice in its holy aura."
- decision_consecrated_worlds_effects_short:1 "Adds this world to our canon of Consecrated Worlds, boosting §YSpiritualist Ethics Attraction§! and §YEmpire-Wide Amenities§! as well as £unity£ §YUnity Generation§!."
- decision_consecrated_worlds_effects_custom:1 "Adds this world to our canon of Consecrated Worlds (up to §Y3§!), increasing §YSpiritualist Ethics Attraction§!, §YEmpire-Wide Amenities§! and boosting £unity£ §YUnity Generation§!, scaling to the spiritual significance of the planet."
+ decision_consecrated_worlds:1 "ดาวศักดิ์สิทธิ์"
+ decision_consecrated_worlds_desc:2 "ประกาศให้ที่นี่เป็นสถานที่ศักดิ์สิทธิ์ ตามวัฒนธรรมที่เราศรัทธา ผู้แสวงบุญจะเดินทางมาจากแดนไกลเพื่อชื่นชมยินดีในออร่าศักดิ์สิทธิ์"
+ decision_consecrated_worlds_effects_short:1 "เพิ่มดาวดวงนี้ให้เป็นดาวศีลศักดิ์สิทธิ์ของเรา, เพิ่ม §Yแรงดึงดูดจริยธรรมจิตวิญญาณ§! และ §Yความอยู่ดีกินดีทั่วทั้งจักรวรรดิ§! เช่นเดียวกับ £unity£ §Yการสร้างเอกภาพ§!"
+ decision_consecrated_worlds_effects_custom:1 "เพิ่มดาวดวงนี้ให้เป็นดาวศีลศักดิ์สิทธิ์ของเรา (สูงสุดที่ §Y3§!), เพิ่ม §Yแรงดึงดูดจริยธรรมจิตวิญญาณ§!, §Yความอยู่ดีกินดีทั่วทั้งจักรวรรดิ§! และเพิ่ม £unity£ §Yการสร้างเอกภาพ§! ตามความสำคัญทางจิตวิญญาณของดาวเคราะห์ดวงนี้"
  decision_unconsecrated_worlds:1 "โลกไม่ศักดิ์สิทธิ์"
  decision_unconsecrated_worlds_desc:1 "This revokes the object's sacred status."
  decision_unconsecrated_worlds_effects_short:0 "Revoke this planet's consecrated status."
  decision_unconsecrated_worlds_effects_custom:0 ""
  consecrated_worlds_too_many:0 "$TRIGGER_FAIL$§RWe have already consecrated §Y3§! worlds§! §H(Unconsecrate another world to consecrate this one)§!"
- consecrated_worlds_planet_owned:0 "$TRIGGER_FAIL$§RColonized planets cannot be consecrated§!"
- consecrated_worlds_unsuitable:0 "\n§YThis object may be relatively ill-suited for consecration§!"
- consecrated_worlds_suitable:0 "\n§YThis object may be fairly suitable for consecration§!"
+ consecrated_worlds_planet_owned:0 "$TRIGGER_FAIL$§Rดาวเคราะห์อาณานิคมไม่สามารถทำให้ศักดิ์สิทธิ์ได้§!"
+ consecrated_worlds_unsuitable:0 "\n§Yวัตถุประสงค์นี้ค่อนข้างไม่เหมาะสมแก่การทำให้ศักดิ์สิทธิ์§!"
+ consecrated_worlds_suitable:0 "\n§Yวัตถุประสงค์นี้ค่อนข้างเหมาะสมแก่การทำให้ศักดิ์สิทธิ์§!"
  consecrated_worlds_perfect:0 "\n§YThis object possesses an inherent sanctity, and ought to be consecrated§!"
  decision_martial_law:0 "ประกาศกฎอัยการศึก"
  decision_martial_law_desc:0 "Most local functions of government are suspended, and the planet is placed under direct military control in an attempt to restore civil order."
