--- a/mod/thmod/localisation/english/necroids_l_english.yml
+++ b/mod/thmod/localisation/english/necroids_l_english.yml
@@ -51,8 +51,8 @@
  building_sacrificial_temple_2_desc:0 "Technological enhancements to this consecrated building allow for more rigorous study, and a more tangible sense of devotion to causes beyond its mutable walls."
  building_sacrificial_temple_3:0 "วิหารแห่งการเสียสละอันยิ่งใหญ่"
  building_sacrificial_temple_3_desc:0 "A site of supreme consecration in which multi-sensory immersion fields allow the faithful to honor every [This.Owner.GetAdj] sacrifice - past, present and future."
- job_death_priest:0 "Death Priest"
- job_death_priest_plural:0 "Death Priests"
+ job_death_priest:0 "นักบวชมรณะ"
+ job_death_priest_plural:0 "นักบวชมรณะ"
  job_death_priest_desc:0 "The spiritual guidance of the masses is ensured by those who will - when called upon - make sacrifices of their most devout pupils."
  job_death_priest_effect_desc:0 "£job_death_priest£ $job_death_priest_plural$ เปลี่ยน £consumer_goods£ §Y$consumer_goods$§! เป็น £unity£ §Y$unity$§!, £society£ §Y$society_research$§! และ £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!"
  mod_job_death_priest_add:0 "งาน$job_death_priest$"
