--- a/mod/thmod/localisation/english/paragon_2_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_2_l_english.yml
@@ -28,14 +28,14 @@
  RECRUIT_LEADER_ALREADY_OVER_CAP_DESC:0 "You have exceeded your Leader Cap. Recruiting this leader will further increase penalties to your leaders' upkeep and experience gain."
  RECRUIT_LEADER_TITLE:0 "แต่งตั้งผู้นำ?"
  RECRUIT_LEADER_DESC:0 "สรรหาผู้นำในจักรวรรดิของคุณ\n\nผู้นำคนนี้มีค่าใช้จ่าย $COST|Y$ และค่าตอบแทน §Y[Root.GetUpkeep]§! ต่อเดือน"
- TOTAL_LEADER_COST:0 "Total: $COST$"
+ TOTAL_LEADER_COST:0 "ทั้งหมด: $COST$"
  LEADER_AGE_UNKNOWN:0 "§Y???§!"
  LEADER_AGE_STRING:0 "$AGE|Y$"
  RECRUIT_LEADER_HIRE_ANYWAY:0 "ยังไงก็แต่งตั้ง"
  COUNCIL_VIEW_UNLOCK_COUNCILOR_HEADER:0 "Council Positions"
- COUNCIL_LEGITIMACY:0 "Council Legitimacy"
+ COUNCIL_LEGITIMACY:0 "ความชอบธรรมของสภา"
  COUNCIL_LEGITIMACY_TOOLTIP_HEADER:0 "§H$COUNCIL_LEGITIMACY$§!\n"
- COUNCIL_LEGITIMACY_TOOLTIP_DESC:0 "§E§HLegitimacy§! summarizes how well your §HFactions§! approve of your Ruler and Councilors' ethics. The more £political_power£§HPower§! a faction has, the more important their approval is.\n\nFaction approval generates £unity£§H$unity$§! and £happiness£§H$HAPPINESS$§!. See the Factions tab for details.§!"
+ COUNCIL_LEGITIMACY_TOOLTIP_DESC:0 "§E§Hความชอบธรรม§! เป็นการสรุปว่า §Hกลุ่มการเมืองต่างๆ§! ของคุณ ยอมรับจริยธรรมของผู้ปกครองและสมาชิกสภาเพียงใด ยิ่งถ้ากลุ่มมี £political_power£§Hพลังอำนาจ§! มากเท่าใด ความพึงพอใจของพวกเขาก็ยิ่งมีความสำคัญมากขึ้นเท่านั้น\n\nความพึงพอใจของกลุ่มการเมืองจะสร้าง £unity£§H$unity$§! และ £happiness£§H$HAPPINESS$§! ดูได้ในแท็บกลุ่มการเมืองสำหรับรายละเอียด§!"
  COUNCIL_LEGITIMACY_TOOLTIP_FACTION_INFO:0 "[Root.HasEthicIcon] §Y$NAME$§! (£political_power£$POWER|%0Y$)"
  DEMAND_FULFILLED:0 "£dot_green£$NAME$: $VALUE|0+$"
  DEMAND_UNFULFILLED:0 "£dot_red£$NAME$: $VALUE|0+$"
@@ -113,7 +113,7 @@
  LEADER_ASSIGNMENT:0 "เลือกผู้นำ"
  CLICK_TO_RECRUIT_AND_ASSIGN:0 "คลิกเพื่อสรรหาและแต่งตั้ง"
  DISMISS_LEADER_COST_DESC:0 "Dismissing this leader will cost $COST$"
- CLICK_TO_ASSIGN_LEADER:1 "§GClick to assign Leader§!"
+ CLICK_TO_ASSIGN_LEADER:1 "§Gคลิกเพื่อแต่งตั้ง§!"
  can_not_dismiss_rulers:1 "§RCan't Dismiss Ruler§!"
  NO_CLASS_LEADER_AVAILABLE:0 "No Leader of class $CLASS|Y$ available"
  NO_LEADER_AVAILABLE:0 "No Leader available"
@@ -145,7 +145,7 @@
  AGENDA_BASE_COST:0 "ค่าใช้จ่ายพื้นฐาน: $COST|Y$"
  AGENDA_COST_INCREASE_FROM_SPRAWL:1 "Increased Cost from $EMPIRE_SIZE$: $SPRAWL$"
  AGENDA_TITLE:0 "แผนการของสภา"
- TOTAL_AGENDA_COST:0 "Total: $COST$"
+ TOTAL_AGENDA_COST:0 "ทั้งหมด: $COST$"
  MOD_COUNCIL_AGENDA_PROGRESS_SPEED:0 "ความเร็วของแผนการของสภา"
  MOD_COUNCIL_AGENDA_FINISHING_EFFECT_DURATION_MULT:0 "ระยะเวลาของเอฟเฟกต์แผนการของสภา"
  CHANGE_AGENDA:0 "เปลี่ยนแผนการของสภา?"
@@ -205,14 +205,14 @@
  DAYS_UNTIL_LEADER_POOL_REFRESH:0 "กลุ่มผู้นำถูกรีเฟรช $DATE$ (เหลือ $TIME$)"
  DIALOG_EARLY_ACTIVATE_AGENDA_TITLE:0 "Immediate Agenda Activation"
  DIALOG_EARLY_ACTIVATE_AGENDA_DESC:0 "Activate $NAME|Y$ immediately for $COST|Y$?"
- col_capital_foundry:0 "Forge Capital"
- col_capital_foundry_desc:1 "The sound of our Capital's forges is the beating heart of our Empire."
- col_capital_factory:0 "Factory Capital"
- col_capital_factory_desc:0 "Factories and manufacturing plants create a vast ocean that covers our Capital's surface."
- col_capital_trade:0 "Trade Capital"
- col_capital_trade_desc:0 "Our capital is a metropolis of trade and prosperity."
- col_capital_extraction:0 "Capital Extraction World"
- col_capital_extraction_desc:0 "Resource extraction dominates the planet's surface."
+ col_capital_foundry:0 "ศูนย์กลางโรงหลอมโลหะ"
+ col_capital_foundry_desc:1 "เสียงของโรงหลอมโลหะที่ศูนย์กลางจักรวรรดิ คือหัวใจของจักรวรรดิเรา"
+ col_capital_factory:0 "ศูนย์กลางโรงงานอุตสาหกรรม"
+ col_capital_factory_desc:0 "โรงงานและโรงงานผลิตสร้างสิ่งที่ยิ่งใหญ่ที่ครอบคลุมพื้นผิวของดาวศูนย์กลางจักรวรรดิเรา"
+ col_capital_trade:0 "ศูนย์กลางการค้า"
+ col_capital_trade_desc:0 "ศูนย์กลางของเราคือมหานครแห่งการค้าและความเจริญรุ่งเรือง"
+ col_capital_extraction:0 "ดาวศูนย์กลางการสกัดทรัพยากร"
+ col_capital_extraction_desc:0 "สกัดทรัพยากรครอบครองพื้นผิวของดาวเคราะห์"
  RESET_TOPBAR_BUTTON_TEXT:0 "รีเซ็ต"
  TOPBAR_SETTINGS_BUTTON:0 "§Hสลับตัวเลือกเมนู§!\n§Gปรับแต่งลำดับของรายการในเมนู§!"
  RESET_TOPBAR_ORDERING:0 "§HReset§!\n§GClick to reset menu items back to the default order.§!"
@@ -557,7 +557,7 @@
  YOU_HAVE_NO_ADMIRAL_PLURAL:0 "You have no Admirals"
  YOU_HAVE_NO_GOVERNOR_PLURAL:0 "You have no Governors"
  YOU_HAVE_NO_LEADERS:0 "You have no Leaders"
- TOOLTIP_ETHICS:0 "§HGovernment Ethics§!"
+ TOOLTIP_ETHICS:0 "§Hจริยธรรมการปกครอง§!"
  PLANET_CONTROLLER_GAINED_VIA_BOMBARDMENT_TITLE:0 "Planet Surrendered"
  PLANET_CONTROLLER_GAINED_VIA_BOMBARDMENT_DESC:0 "We have gained control of $PLANET|H$ via §HOrbital Bombardment§!"
  ASSIGN_GENERAL_NO_ARMIES:0 "§RMust have armies in order to assign a General§!"
@@ -578,8 +578,8 @@
  LEADER_UI_DISMISS_ENABLED:0 "Dismiss §Y$LEADER_NAME$§!"
  LEADER_BACKGROUND_DESC:0 "§Y[Root.GetName]§! จาก §Y$PLANET$§!, โดยที่[Root.GetSheHe]เคยดำรงตำแหน่ง $JOB$"
  LEADER_ETHIC:0 "§Hจริยธรรม§!\n$ETHIC|Y$\n$SEPARATOR$\n§Eในขณะที่ผู้นำ §Yสภา§! §Hให้การดึงดูดจริยธรรม§! §Y$@council_ethic_attraction|%0$§! ต่อจริยธรรมของเขา§!"
- ETHIC_A:0 "a"
- ETHIC_AN:0 "an"
+ ETHIC_A:0 ""
+ ETHIC_AN:0 ""
  BACKGROUND_A_CLASS:0 "[Root.Class_A_An] [Root.GetClass]"
  BACKGROUND_AN_ETHIC_CLASS:0 "[Root.Ethic_A_An] [Root.GetBackgroundEthic] [Root.GetClass]"
  MESSAGE_NEGATIVE_TRAIT_TITLE:0 "คุณลักษณะเชิงลบใหม่"
@@ -674,7 +674,7 @@
  trait_ruler_eye_for_talent_2_desc:0 "$trait_ruler_eye_for_talent_desc$"
  leader_trait_gifted:0 "มีพรสวรรค์"
  leader_trait_gifted_desc:1 "This leader has a quick mind, grasping demanding concepts with ease."
- trait_imperial_heir:0 "Imperial Heir"
+ trait_imperial_heir:0 "รัชทายาท"
  trait_imperial_heir_desc:0 "The heir is next in line to rule the Empire."
  leader_trait_scrapper:0 "นักขูด"
  leader_trait_scrapper_desc:1 "This leader possesses and operates private scavenging drones."
