--- a/mod/thmod/localisation/english/pop_factions_l_english.yml
+++ b/mod/thmod/localisation/english/pop_factions_l_english.yml
@@ -468,14 +468,14 @@
  POP_FACTION_NO_EFFECTS_DESC:0 "The $FACTION$ will never have any effects."
  POP_FACTION_NO_CURRENT_EFFECTS:0 "No current effects"
  POP_FACTION_NO_CURRENT_EFFECTS_DESC:0 "The $FACTION$ have no effects at this time."
- faction_demand_HAPPY_WE_RULE:0 "Ruler of their Ethic"
- faction_demand_HAPPY_WE_RULE_desc:0 "Having a Ruler of their ethic pleases the [Root.GetName]."
- faction_demand_HATE_RULER_ETHICS:0 "Ruler shouldn't have Opposing Ethic"
- faction_demand_HATE_RULER_ETHICS_desc:0 "Having a Ruler of the opposing ethic displeases the [Root.GetName]."
- faction_demand_ACCEPTABLE_RULER_ETHICS:0 "Ruler has Empire Ethic"
- faction_demand_ACCEPTABLE_RULER_ETHICS_desc:0 "Having a Ruler matching the Empire's Ethics is tolerated by the [Root.GetName].\n\nA Ruler of their own Ethic would be even better."
- faction_demand_REPRESENTED_ON_COUNCIL:0 "Represented on Council"
- faction_demand_REPRESENTED_ON_COUNCIL_desc:0 "Having a Ruler or Councilor of their ethic will please the [Root.GetName]."
+ faction_demand_HAPPY_WE_RULE:0 "ผู้ปกครองมีจริยธรรมตรงกับกลุ่มการเมือง"
+ faction_demand_HAPPY_WE_RULE_desc:0 "มีผู้ปกครองที่มีจริยธรรมทำให้ [Root.GetName] พอใจ"
+ faction_demand_HATE_RULER_ETHICS:0 "ผู้ปกครองไม่ควรมีจริยธรรมตรงกันข้าม"
+ faction_demand_HATE_RULER_ETHICS_desc:0 "มีผู้ปกครองที่มีจริยธรรมเป็นปฏิปักษ์ทำให้ [Root.GetName] ไม่พอใจ"
+ faction_demand_ACCEPTABLE_RULER_ETHICS:0 "ผู้ปกครองมีจริยธรรมตรงกับจักรวรรดิ"
+ faction_demand_ACCEPTABLE_RULER_ETHICS_desc:0 "มีผู้ปกครองที่ตรงกับจริยธรรมของจักรวรรดินั้นได้รับการยอมรับจาก [Root.GetName]\n\nA Ruler of their own Ethic would be even better."
+ faction_demand_REPRESENTED_ON_COUNCIL:0 "มีตัวแทนในสภา"
+ faction_demand_REPRESENTED_ON_COUNCIL_desc:0 "มีผู้ปกครองหรือสมาชิกสภามีจริยธรรมที่จะทำให้ [Root.GetName] พอใจ"
  POP_FACTION_SEPARATIST_DEMAND_TITLE_1:0 "§H[parameter:planet.GetName]ian§! autonomy"
  POP_FACTION_SEPARATIST_DEMAND_DESC_1:0 "Establish a new Sector with §H[parameter:planet.GetName]§! as its capital."
  POP_FACTION_SEPARATIST_DEMAND_TITLE_2:0 "§H[parameter:planet.GetName]ian§! independence"
