--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -790,7 +790,7 @@
  ap_master_builders:0 "สถาปนิก"
  ap_imperial_prerogative:0 "อำนาจพิเศษที่ยิ่งใหญ่"
  ap_one_vision:0 "วิสัยทัศน์หนึ่งเดียว"
- ap_consecrated_worlds:0 "โลกศักดิ์สิทธิ์"
+ ap_consecrated_worlds:0 "ดาวศักดิ์สิทธิ์"
  ap_executive_vigor:0 "อำนาจบริหาร"
  ap_executive_vigor_desc:0 "จะไม่มีมาตรการครึ่งๆกลางๆหรือการประนีประนอมเมื่อต้องดำเนินการตามคำสั่งที่ตัดสินใจโดยรัฐบาลของเรา เราไปทุกทางที่เป็นไปได้หรือไม่ไปเลยก็ได้"
  ap_galactic_force_projection:0 "การวางแผนกองกำลังกาแล็กติก"
