--- a/mod/thmod/localisation/english/utopia_l_english.yml
+++ b/mod/thmod/localisation/english/utopia_l_english.yml
@@ -47,8 +47,8 @@
  allow_think_tank:0 "§Hปลดล็อกสิ่งก่อสร้างขนาดมหึมา:§! สถานีเชื่อมโยงวิทยาศาสตร์ขนาดใหญ่"
  allow_habitats:0 "§Hปลดล็อกสถานี:§! ที่อยู่อาศัยในอวกาศ"
  ap_master_builders_habitat_size:2 "§Hที่อยู่อาศัยในอวกาศ§! ของจักรวรรดิเราจะมีที่ว่างเพิ่มเติมอีก §Y2§! เขต"
- allow_edict_consectrated_worlds:5 "§Hปลดล็อกการตัดสินใจ:§! โลกศักดิ์สิทธิ์\n"
- describe_edict_consectrated_worlds:5 "§EConsecrating uninhabited planets (up to §Y3§!) increases §YSpiritualist Ethics Attraction§! and §YEmpire-Wide Amenities§! as well as £unity£ §YUnity Generation§!, scaling to the spiritual significance of the worlds consecrated.§!"
+ allow_edict_consectrated_worlds:5 "§Hปลดล็อกการตัดสินใจ:§! ดาวศักดิ์สิทธิ์\n"
+ describe_edict_consectrated_worlds:5 "§Eทำดาวเคราะห์ที่ไม่มีใครอยู่ให้เป็นดาวศักดิ์สิทธิ์ (สูงสุดที่ §Y3§!) เพิ่ม §Yแรงดึงดูดจริยธรรมจิตวิญญาณ§! และ §Yความอยู่ดีกินดีทั่วทั้งจักรวรรดิ§! เช่นเดียวกับ £unity£ §Yการสร้างเอกภาพ§! ตามความสำคัญทางจิตวิญญาณของดาวเคราะห์§!"
  allow_machine_worlds:2 "§Hปลดล็อกตัวเลือกการปรับสภาพดาว:§! โลกเครื่องจักร"
  describe_machine_worlds:6 "- §Yโลกเครื่องจักร§! เป็นดาวเคราะห์ชนิดพิเศษที่ไม่เอื้ออำนวยต่อสิ่งมีชีวิตส่วนใหญ่ แต่ไม่ถูกจำกัดจำนวนของเขตต่างๆที่รองรับ: £district£ §Yเขตกำเนิดไฟฟ้า§!, §Yเขตเหมืองแร่§! และ §Yเขตเกษตรกรรม§!\n\n- £pop£ §Yประชากร§! ที่อาศัยบน §Yดาวเครื่องจักร§! จะมี §Yผลผลิตของทรัพยากร§! เพิ่มขึ้น §G+10%§! และ §Yการใช้ที่อยู่อาศัย§! ลดลง §G10%§! เขต £district£ §Yเขตเกษตรกรรม§! บนดาวจะถูกทำลาย"
  allow_hive_worlds:0 "§Hปลดล็อกตัวเลือกการปรับสภาพดาว:§! โลกที่เป็นรัง"
