--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -136,7 +136,7 @@
  MOD_LITHOID_POP_HAPPINESS_DESC:1 "Lithoid Pops have their Happiness adjusted by this value."
  mod_LITHOID_pop_happiness:0 "$MOD_LITHOID_POP_HAPPINESS$"
  mod_LITHOID_pop_happiness_DESC:0 "$MOD_LITHOID_POP_HAPPINESS_DESC$"
- MOD_FACTION_APPROVAL:0 "การเห็นชอบความต้องการของกลุ่มการเมือง"
+ MOD_FACTION_APPROVAL:0 "ความพึงพอใจของกลุ่มการเมือง"
  MOD_POP_RADIATION_HAPPINESS:0 "ความสุขจากรังสี"
  MOD_POP_RADIATION_HAPPINESS_DESC:0 "All Mechanical Pops within the Empire will have their Happiness adjusted by this value."
  MOD_POP_ENVIRONMENT_TOLERANCE:1 "การอยู่อาศัยได้"
