--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -476,7 +476,7 @@
  tr_unyielding_federations_finish:0 "$tr_unyielding_finish$"
  tr_unyielding_federations_finish_desc:0 "$MOD_STARBASE_DEFENSE_PLATFORM_CAPACITY_MULT$ §G+50%§!\n$mod_starbases_upkeep_mult$ §G-20%§!\nสามารถเข้าถึงสหพันธ์ประเภท §Y$military_federation$§! ได้\nปลดล็อกการยกระดับ: §G+1§!"
  tr_unyielding_resistance_is_frugal:0 "ความอดทนนั้นประหยัด"
- tr_unyielding_resistance_is_frugal_desc:1 "£defense_army£ §Yกองทัพป้องกัน§! ตอนนี้สามารถผลิต §Y0.5§! £unity£ เอกภาพ นอกจากนี้ §Y$MOD_ARMY_DEFENSE_HEALTH_MULT$§! เพิ่มขึ้น §G+25%§!"
+ tr_unyielding_resistance_is_frugal_desc:2 "£defense_army£ §Yกองทัพป้องกัน§! ตอนนี้สามารถผลิต £unity£ เอกภาพ §Y0.5§!"
  tr_unyielding_resistance_is_frugal_hive:0 "$tr_unyielding_resistance_is_frugal$"
  tr_unyielding_resistance_is_frugal_machine:0 "$tr_unyielding_resistance_is_frugal$"
  tr_unyielding_resistance_is_frugal_delayed:0 "Our people take great comfort in the strength of the bulwarks that guard our planets, and view them as vital to ensuring a more prosperous future."
@@ -635,7 +635,7 @@
  tradition_aptitude_machine_desc:0 "ความสามารถของยูนิตผู้นำระดับสูงจะเพิ่มศักยภาพความยิ่งใหญ่ของจักรวรรดิ"
  tr_aptitude_adopt:0 "วัฒนธรรมความสามารถ"
  tr_aptitude_finish:0 "วัฒนธรรมความสามารถสำเร็จ"
- tr_aptitude_finish_desc:0 "คุณลักษณะเริ่มต้นของผู้นำ: §G+1§!"
+ tr_aptitude_adopt_desc:0 "คุณลักษณะเริ่มต้นของผู้นำ: §G+1§!"
  tr_aptitude_the_empire_needs_you:0 "จักรวรรดิต้องการคุณ!"
  tr_aptitude_the_empire_needs_you_delayed:0 "Many young people dream of becoming one of the revered leaders of the empire."
  tr_aptitude_the_empire_needs_you_hive:0 "ลุกขึ้นจากฝูง"
@@ -666,7 +666,7 @@
  tr_aptitude_champions_of_the_empire_hive_delayed:0 "The Hive is willing to impart a minute level of autonomy for its strongest elements for the good of the whole"
  tr_aptitude_champions_of_the_empire_machine:0 "สิทธิ์ของผู้ดูแลระบบ"
  tr_aptitude_champions_of_the_empire_machine_delayed:0 "We trust the unique sub-routines of our leaders and give them permission to influence how the Empire is run."
- tr_aptitude_champions_of_the_empire_desc:0 "$admiral_with_icon$ และ $general_with_icon$ แต่ละคน\n$t$$MOD_COUNTRY_NAVAL_CAP_ADD$: §G+2§!\n $governor_with_icon$ แต่ละคน\n$t$$MOD_EMPIRE_SIZE_MULT$: §G-2%§!\n$scientist_with_icon$ แต่ละตน\n$t$$MOD_LEADER_SPECIES_EXP_GAIN$: §G+2%§!"
+ tr_aptitude_champions_of_the_empire_desc:1 "$admiral_with_icon$ และ $general_with_icon$ แต่ละเลเวล\n$t$$MOD_COUNTRY_NAVAL_CAP_ADD$: §G+2§!\n$governor_with_icon$ แต่ละเลเวล\n$t$$MOD_EMPIRE_SIZE_MULT$: §G-2§!\n$scientist_with_icon$ แต่ละเลเวล\n$t$$MOD_LEADER_SPECIES_EXP_GAIN$: §G+0.5%§!"
  tradition_statecraft:0 "การปกครอง"
  tradition_statecraft_desc:0 "สภาที่ทรงพลังช่วยให้จักรวรรดิของเราตอบสนองได้มากขึ้น"
  tradition_statecraft_hive_desc:0 "The Council of Voices defines our empire."
