--- a/mod/thmod/localisation/english/distant_stars_l_english.yml
+++ b/mod/thmod/localisation/english/distant_stars_l_english.yml
@@ -442,7 +442,7 @@
  distar.167.a:0 "Strip it for parts. No sense letting them go to waste."
  distar.167.b:0 "Study its engineering from the remains."
  leader_trait_admiral_warform:0 "Corrosive Survivor"
- leader_trait_admiral_warform_desc:0 "Surviving for centuries in an acidic environment has taught this admiral how to repair our ships in the worst possible circumstances."
+ leader_trait_admiral_warform_desc:1 "The blessing of the Animator of Clay has allowed the warform to survive in the most hostile conditions, and adapt to its corrosive environment."
  leader_trait_admiral_warform_node:0 "Corrosive Survivor Teachings"
  leader_trait_admiral_warform_node_desc:0 "The unique knowlege of the warform has become our own."
  warform_leader_desc:0 "An ancient combat computer ready to serve our empire after having spent centuries in a toxic graveyard."
@@ -1844,11 +1844,11 @@
  disco_gray_cat:0 "Surface Signature"
  disco_gray_cat_desc:0 "A strange energy signature emanates from the barren and lifeless surface of [From.GetName]."
  leader_trait_governor_gray:0 "แก่นแท้แห่งนาไนต์"
- leader_trait_governor_gray_desc:0 "Gray is in reality a dense swarm of billions upon billions of advanced nanites."
+ leader_trait_governor_gray_desc:1 "Gray is a dense swarm of billions of advanced nanites."
  gray_army:0 "ร่างสงครามนาไนต์"
  gray_warship:0 "Gray Warship"
  gray_catch_phrase:0 "How many limbs did you have again?"
- gray_backstory:0 "The a highly nanite swarm has decided to join us to stave of their eternal boredom."
+ gray_backstory:1 "A highly advanced nanite swarm has joined us to stave off their eternal boredom."
  graygoo.500.title:0 "Gray"
  graygoo.500.a.desc:0 "Shall we get started?"
  graygoo.500.b.desc:0 "This is gonna be great."
