--- a/mod/thmod/localisation/english/events_6_l_english.yml
+++ b/mod/thmod/localisation/english/events_6_l_english.yml
@@ -217,7 +217,7 @@
  anomaly.3140.name:0 "Heat from Below"
  anomaly.3140.desc:0 "After probing beneath the surface, we have concluded the unusual heat signatures on [From.GetName] are caused by hydrothermal springs. There seems to be more to this planet than meets the eye..."
  anomaly.3140.a:0 "Remarkable. But we need not waste any more resources on this."
- anomaly.3141.name:0 "The depths of Alien Life"
+ anomaly.3141.name:0 "The Depths of Alien Life"
  anomaly.3141.desc:0 "Continued exploration by the crew of [From.GetName] has revealed the hot water coming from deep within the planet's crust is teeming with microscopic life! What we once thought of as an empty, frozen planet, actually contains a thriving underwater biosphere!"
  colony.5000.name:0 "An Unexpected Friend"
  colony.5000.desc:0 "The enigmatic creature on [Root.GetName] has been very welcoming to our colonists after they settled down on the planet. At first many of our settlers were distrustful of the small robot, but it has shown itself to be incredibly helpful and has played a key role in establishing the colony.\n\nFollowing the first years of the colony, the small thing has become something of a pet figure in the first cities on [Root.GetName], and a mascot for the planet as a whole."
