--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -1291,8 +1291,8 @@
  job_primitive_hive_warrior_plural:0 "Simple Warrior Drones"
  job_primitive_hive_warrior_desc:0 "Having yet to fully come to grips with genetic specialization, these drones are grown bulkier to protect their hive. They have yet to evolve any specialized weapon appendages."
  mod_job_primitive_hive_warrior_add:0 "$job_primitive_hive_warrior$ Jobs"
- job_primitive_hive_synapse_drone:0 "Nascent Synapse Drone"
- job_primitive_hive_synapse_drone_plural:0 "Nascent Synapse Drones"
+ job_primitive_hive_synapse_drone:1 "Nascent Synapse Drone"
+ job_primitive_hive_synapse_drone_plural:1 "Nascent Synapse Drones"
  job_primitive_hive_synapse_drone_desc:0 "The budding Overmind formed between the local drones has found a need to extend their consciousness further. These more cerebral Synapse Drones mainly facilitate this."
  mod_job_primitive_hive_synapse_drone_add:0 "$job_primitive_hive_synapse_drone$ Jobs"
  job_primitive_hive_cerebellum_drone:0 "Cerebellum Drone"
@@ -1657,7 +1657,7 @@
  mod_planet_soldiers_unity_produces_add:1 "£unity£ $unity$ จาก £job_soldier£ [GetSoldierPlural]"
  mod_planet_soldiers_energy_upkeep_add:0 "£energy£ $energy$ ที่เป็นค่าบำรุงรักษาของ £job_soldier£ [GetSoldierPlural]"
  mod_planet_entertainers_produces_mult:0 "ทรัพยากรจาก [GetEntertainerPluralWithIcon]"
- mod_planet_entertainers_unity_produces_add: "£unity£ $unity$ จาก [GetEntertainerPluralWithIcon]"
+ mod_planet_entertainers_unity_produces_add:0 "£unity£ $unity$ จาก [GetEntertainerPluralWithIcon]"
  mod_station_gatherers_produces_mult:0 "ผลผลิตของสถานีเหมืองแร่"
  mod_station_researchers_produces_mult:0 "ผลผลิตของสถานีวิจัย"
  MOD_COUNTRY_ADMIN_CAP_ADD:1 "ความสามารถในการบริหาร"
@@ -3446,7 +3446,7 @@
  mega.9007.name:0 "สมัชชาระหว่างดวงดาว: แหวนกงสุล"
  mega.9007.desc:0 "The second stage of the Interstellar Assembly, the Consul Ring, is now complete. This inner circle will house most of our diplomatic staff going forward."
  mega.9008.name:0 "สมัชชาระหว่างดวงดาว: โมดูลส่วนการประชุม"
- mega.9008.desc:0 "The Interstellar Assembly's outer ring is populated with vast, state-of-the-art conference rooms equipped with privacy filters (penetrable only by [Root.GetAdj] surveillance, of course). The station is quickly becoming the de-facto galactic hub for off-site negotiations."
+ mega.9008.desc:1 "The Interstellar Assembly's outer ring is populated with vast, state-of-the-art conference rooms equipped with privacy filters (penetrable only by [Root.GetAdj] surveillance, of course). The station is quickly becoming the de-facto galactic hub for off-site negotiations."
  mega.9009.name:0 "สมัชชาระหว่างดวงดาว"
  mega.9009.desc:0 "The Interstellar Assembly is now fully operational, and plays host to a number of embassies from the galaxy's major powers, be they political or corporate.\n\nOur diplomats are having a hard time keeping up with the steady flow of information on national interests and political embarrassments we are extracting from the station. At least our guests seem largely disinterested in our surveillance, as long as we provide the ideal environs for them to strong-arm their competitors."
  mega.9010.name:0 "เครื่องดึงมวลสารจากหลุมดำ: Anchor (ขั้นที่1)"
