--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -115,9 +115,10 @@
  MOD_COUNTRY_EDICT_CAP_ADD:0 "$EDICT_CAPACITY_TITLE$"
  MOD_COUNTRY_EDICT_CAP_MULT:0 "$EDICT_CAPACITY_TITLE$"
  MOD_EMPIRE_SIZE_MULT:0 "$empire_size_mods$"
+ MOD_EMPIRE_SIZE_ADD:0 "$empire_size_mods$"
  MOD_COUNTRY_COMMUNITY_GDF_NAVAL_CAPACITY_ADD:0 "Community Fleet Naval Capacity"
  MOD_COUNTRY_COMMUNITY_GDF_NAVAL_CAPACITY_ADD_DESC:0 "Modifies the Naval Capacity of the Galactic Defense Force and Imperial Armada"
- MOD_FIRST_CONTACT_SPEED_MULT:0 "First Contact Discovery Speed"
+ MOD_FIRST_CONTACT_SPEED_MULT:0 "ความเร็วในการค้นพบการติดต่อแรก"
  MOD_FIRST_CONTACT_CLUES_ADD:0 "First Contact Skill"
  MOD_FIRST_CONTACT_DEFENSE_ADD:0 "ความยากในการติดต่อครั้งแรกของเป้าหมาย"
  MOD_INTEL_GAIN_SPEED:0 "Speed of Intel Gain on Other Empires"
@@ -1158,7 +1159,6 @@
  triggered_fe_opinion_barbaric_despoilers:0 "$civic_barbaric_despoilers$"
  triggered_opinion_relic_omnicodex:0 "$r_omnicodex$"
  triggered_opinion_crusader_spirit:0 "$civic_crusader_spirit$"
- triggered_opinion_crusader_spirit_machine_empires:0 "$civic_crusader_spirit$"
  triggered_opinion_crusader_spirit_pos:0 "$civic_crusader_spirit$"
  capital:0 "โลกศูนย์กลางจักรวรรดิ"
  capital_desc:0 "The Capital planet of an interstellar empire is a vast complex of government buildings, bureaus and agency headquarters."
